--- a/gnome-shell/v40/gnome-shell.css
+++ b/gnome-shell/v40/gnome-shell.css
@@ -997,7 +997,8 @@ StScrollBar {
   background-color: #e1e1e1;
   box-shadow: none;
   border: none;
-  text-shadow: none; }
+  text-shadow: none;
+  border: 1px solid #e1e1e1; }
   .message:hover, .message:focus {
     color: #31363d;
     background-color: #d2d2d2;
